--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Alexander Levin-Koopman # your name (or website title) here
-logo: "/images/image_6483441 (1).JPG?raw=true" # your photo (or logo) here
+title: Alexander       Levin-Koopman # your name (or website title) here
+logo: "/images/profile_image.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   About 
   <br><br>
