--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,9 +1,7 @@
 title: Alexander<br>Levin-Koopman # your name (or website title) here
 logo: "/images/profile_image.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  About 
-  <br><br>
-  Second description 
+  About: 
   <br><br>
   <a href="https://www.linkedin.com/in/alexander-levin-koopman-550522188/">View My LinkedIn Profile</a> 
   
