--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,7 +2,16 @@ title: Alexander<br>Levin-Koopman # your name (or website title) here
 logo: "/images/profile_image.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   About: 
-  <br><br>
+  <br>
+    I am currently a Lecturer in Information in the Master of Applied Data Science (MADS) 
+    program at The University of Michigan School of Information. I have a deep passion for 
+    all things machine learning especially natural language processing and reinforcement
+    learning.
+    I posses a masters degree in Applied Data Science from The University of Michigan,
+    where I achieved a 4.0 GPA. My undergraduate degree is in mathematics, with a minor
+    in economics from the University of Colorado at Boulder which is where I found my passion
+    for data science. 
+  <br>
   <a href="https://www.linkedin.com/in/alexander-levin-koopman-550522188/">View My LinkedIn Profile</a> 
   
 remote_theme: pages-themes/minimal@v0.2.0
