--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-title: Alexander<br>Levin-Koopman # your name (or website title) here
+title: Alexander Levin-Koopman # your name (or website title) here
 logo: "/images/profile_image.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   I am currently a Lecturer in Information in the Master of Applied Data Science (MADS) 
