--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -9,7 +9,8 @@ description: > # your text below (remove <br> elements if you don't need line br
   where I achieved a 4.0 GPA. My undergraduate degree is in mathematics, with a minor
   in economics from the University of Colorado at Boulder.<br>
   <br>
-  <a href="https://www.linkedin.com/in/alexander-levin-koopman-550522188/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/alexander-levin-koopman-550522188/">View My LinkedIn Profile</a>
+  <a href="https://github.com/Alkoopman85">View My GitHub Profile</a>
   
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
