--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,7 +11,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br>
   <a href="https://www.linkedin.com/in/alexander-levin-koopman-550522188/">View My LinkedIn Profile</a>
   <br>
-  <a href="https://github.com/Alkoopman85">View My GitHub Profile</a>
+  <a href="https://github.com/Alkoopman85/">View My GitHub Profile</a>
   
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
