--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,16 +2,16 @@ title: Alexander<br>Levin-Koopman # your name (or website title) here
 logo: "/images/profile_image.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   I am a Lecturer in Information in the Master of Applied Data Science (MADS) 
-  program at The University of Michigan School of Information. My expertise lies 
+  program at the University of Michigan School of Information. My expertise lies 
   in the realm of machine learning, and I am deeply committed to advancing 
   the field through my teaching, and mentorship.<br>
   <br>
   My academic credentials include a masters degree in applied data science 
-  from The University of Michigan, where I achieved a 4.0 GPA, 
+  from the University of Michigan, where I achieved a 4.0 GPA, 
   as well as a bachelor's degree in mathematics with a minor in economics 
   from the University of Colorado at Boulder. I am dedicated to the pursuit of 
   knowledge and the cultivation of academic excellence, and I take great pride 
-  in helping my students to achieve their full potential and make meaningful 
+  in helping my students achieve their full potential and make meaningful 
   contributions to the world of data science.<br>
   <br>
   <a href="https://www.linkedin.com/in/alexander-levin-koopman-550522188/">View My LinkedIn Profile</a>
