new about section

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,18 +1,21 @@
 title: Alexander<br>Levin-Koopman # your name (or website title) here
 logo: "/images/profile_image.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  I am a Lecturer in Information in the Master of Applied Data Science (MADS) 
-  program at the University of Michigan School of Information. My expertise lies 
-  in the realm of machine learning, and I am deeply committed to advancing 
-  the field through my teaching, and mentorship.<br>
+  As a lecturer in Applied Data Science at the University of Michigan School of Information, 
+  I'm passionate about empowering others to extract insights from complex data sets. With a 
+  Master's degree in Applied Data Science (4.0 GPA) from the University of Michigan and a 
+  Bachelor's degree in Mathematics from the University of Colorado at Boulder, I've developed 
+  a strong foundation in statistical analysis, machine learning, and data visualization. 
   <br>
-  My academic credentials include a masters degree in applied data science 
-  from the University of Michigan, where I achieved a 4.0 GPA, 
-  as well as a bachelor's degree in mathematics with a minor in economics 
-  from the University of Colorado at Boulder. I am dedicated to the pursuit of 
-  knowledge and the cultivation of academic excellence, and I take great pride 
-  in helping my students achieve their full potential and make meaningful 
-  contributions to the world of data science.<br>
+  My academic background has equipped me with a unique ability to approach problems from multiple angles, 
+  think creatively, and communicate complex ideas effectively. While my experience is rooted in academia, 
+  I'm eager to apply my skills in a real-world setting and drive business outcomes through data-driven 
+  decision making. 
+  <br>
+  I thrive on solving intricate problems and uncovering hidden patterns in data. My goal is to leverage 
+  my expertise to inform strategic decisions, optimize processes, and create value for organizations. 
+  If you're looking for a driven and analytical problem-solver who is passionate about data science, 
+  let's connect! <br>
   <br>
   <a href="https://www.linkedin.com/in/alexander-levin-koopman-550522188/">View My LinkedIn Profile</a>
   <br>
