--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,7 +2,7 @@ title: Alexander<br>Levin-Koopman # your name (or website title) here
 logo: "/images/profile_image.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   As a lecturer in Applied Data Science at the University of Michigan School of Information, 
-  I'm passionate about empowering others to extract insights from complex data sets. With a 
+  I'm passionate about solving problems through insights extracted from complex data sets. With a 
   Master's degree in Applied Data Science (4.0 GPA) from the University of Michigan and a 
   Bachelor's degree in Mathematics from the University of Colorado at Boulder, I've developed 
   a strong foundation in statistical analysis, machine learning, and data visualization. 
